# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_even.py  brain_games.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/utils/: gameBase.py  game_base.py  generate_random_number.py  get_gcd.py  get_progression.py  isEven.py  is_even.py  is_prime.py
brain_games/utils/: game_base.py
